--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Health program who is going to help people to lose or gain or maintain weight",
   "main": "healthMesures.js",
   "dependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^5.0.4"
+    "readline-sync": "^1.4.10",
+    "ts-node": "~10.9.1",
+    "typescript": "~5.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@types/readline-sync": "^1.4.4"
+  }
 }
