--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Health program who is going to help people to lose or gain or maintain weight",
   "main": "healthMesures.js",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "readline-sync": "^1.4.10",
     "ts-node": "~10.9.1",
     "typescript": "~5.0.4"
